[package]
name = "termongo"
version = "0.1.0"
description="A tool to view your mongoose data in the terminal."
license="MIT"
homepage="https://github.com/caycun/termongo"
repository="https://github.com/caycun/termongo"
readme = "README.md"
keywords = ["cli", "mongoose", "mongodb", "database", "tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
color-print = "0.3.4"
crossterm = "0.25.0"
futures = "0.3.25"
mongodb = "2.3.1"
serde_json = "1.0.91"
tokio = "1.24.0"
